--- a/Statics_advance_3.ipynb
+++ b/Statics_advance_3.ipynb
@@ -509,7 +509,7 @@
     "\n",
     "Then I utilized the follwing two sample T-test formula:\n",
     "\n",
-    "https://black-lawyer-rvdel.pwskills.app/lab/tree/work/image.png\n",
+    "image.png\n",
     "\n",
     "I got the value of t as:\n",
     "\n",
