--- a/Statics_advance_3.ipynb
+++ b/Statics_advance_3.ipynb
@@ -509,7 +509,7 @@
     "\n",
     "Then I utilized the follwing two sample T-test formula:\n",
     "\n",
-    "![image.png](attachment:9668704d-2035-4884-8714-cf40bfb26940.png)\n",
+    "![image.png]\n",
     "\n",
     "I got the value of t as:\n",
     "\n",
